# 42_Needle_Hackathon

./: .env.example  .gitignore  .gitmodules  .oxlintrc.json  CLAUDE.md  LICENSE  PLAN.md  README.md  TASKS.md  package.json  pyproject.toml  tsconfig.json  turbo.json
agent/: llm.py  logger.py  prompts.py  run_agent.py  tools.py
agent_logs/: checkpoint.json  run.jsonl  state.json
apps/agent/: README.md  SPEC-pwgen.md  SPEC.md  agent_manifest.json  main.py  package.json  pyproject.toml  tsconfig.json
apps/agent/solution/: knit.py  test.knit
apps/agent/src/: action-schema.test.ts  checkpoint.test.ts  checkpoint.ts  config.ts  errors.ts  events.ts  harness-helpers.test.ts  harness-helpers.ts  logger.ts  loop.ts  main.ts  ollama.ts  openrouter.ts  operator.ts  prompts.ts  self-tests.test.ts  self-tests.ts  state.ts  submission.ts  test-runner.test.ts  test-runner.ts  tools.test.ts  truncate.ts  tui.ts  workspace.ts
apps/agent/src/agent/: test_runner.py
apps/agent/src/tools/: index.ts  types.ts
apps/server/: package.json  tsconfig.json  tsdown.config.ts
apps/server/src/: index.ts
apps/tui/: README.md  package.json  tsconfig.json
apps/tui/agent_logs/: final_report.md  run.jsonl  state.json
apps/tui/src/: App.tsx  errors.ts  format.ts  main.tsx  types.ts  useAgentLogs.ts
apps/tui/src/components/: EventFeed.tsx  (+2 more)
apps/web/: components.json  index.html  package.json  tsconfig.json  vite.config.ts
apps/web/src/: index.css
docs/: PLAN.md  TASKS.md  error-handling.md
src/agent/: logger.py  prompts.py  run_agent.py
tests/: test_logger.py  test_tools.py
(+18 files in other folders)
